Update example notebook

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "      <td>obl</td>\n",
        "      <td>True</td>\n",
        "      <td>(Case=Abl, Gender=Masc, Number=Sing)</td>\n",
-       "      <td>LOC</td>\n",
+       "      <td>PERSON</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -274,7 +274,7 @@
        "      <td>nsubj</td>\n",
        "      <td>True</td>\n",
        "      <td>(Case=Nom, Gender=Masc, Number=Sing)</td>\n",
-       "      <td>PERSON</td>\n",
+       "      <td></td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -319,7 +319,7 @@
        "      <td>ROOT</td>\n",
        "      <td>True</td>\n",
        "      <td>(Case=Nom, Gender=Masc, Number=Sing)</td>\n",
-       "      <td>PERSON</td>\n",
+       "      <td></td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -499,7 +499,7 @@
        "      <td>obj</td>\n",
        "      <td>True</td>\n",
        "      <td>(Case=Acc, Gender=Masc, Number=Sing)</td>\n",
-       "      <td>PERSON</td>\n",
+       "      <td></td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -598,12 +598,12 @@
        "2                True   False  \n",
        "3                True   False  \n",
        "4                True   False  \n",
-       "5       LOC      True   False  \n",
+       "5    PERSON      True   False  \n",
        "6                True   False  \n",
-       "7    PERSON      True   False  \n",
+       "7                True   False  \n",
        "8                True   False  \n",
        "9                True   False  \n",
-       "10   PERSON      True   False  \n",
+       "10               True   False  \n",
        "11               True   False  \n",
        "12               True   False  \n",
        "13               True   False  \n",
@@ -615,12 +615,12 @@
        "19               True   False  \n",
        "20   PERSON      True   False  \n",
        "21               True   False  \n",
-       "22   PERSON      True   False  \n",
+       "22               True   False  \n",
        "23               True   False  \n",
        "24               True   False  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"la\" id=\"a185a65ddf2d4d4e8e7dbd660203517a-0\" class=\"displacy\" width=\"1800\" height=\"487.0\" direction=\"ltr\" style=\"max-width: none; height: 487.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"la\" id=\"5270ac2c499d48e996dde8317d45acc9-0\" class=\"displacy\" width=\"1800\" height=\"487.0\" direction=\"ltr\" style=\"max-width: none; height: 487.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"397.0\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">Iason</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">PROPN</tspan>\n",
@@ -736,73 +736,73 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-0\" stroke-width=\"2px\" d=\"M70,352.0 C70,2.0 1625.0,2.0 1625.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-0\" stroke-width=\"2px\" d=\"M70,352.0 C70,2.0 1625.0,2.0 1625.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M70,354.0 L62,342.0 78,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-1\" stroke-width=\"2px\" d=\"M70,352.0 C70,264.5 210.0,264.5 210.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-1\" stroke-width=\"2px\" d=\"M70,352.0 C70,264.5 210.0,264.5 210.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">cc</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">cc</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M210.0,354.0 L218.0,342.0 202.0,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-2\" stroke-width=\"2px\" d=\"M70,352.0 C70,177.0 390.0,177.0 390.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-2\" stroke-width=\"2px\" d=\"M70,352.0 C70,177.0 390.0,177.0 390.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">conj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">conj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M390.0,354.0 L398.0,342.0 382.0,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-3\" stroke-width=\"2px\" d=\"M595,352.0 C595,264.5 735.0,264.5 735.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-3\" stroke-width=\"2px\" d=\"M595,352.0 C595,264.5 735.0,264.5 735.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">case</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">case</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M595,354.0 L587,342.0 603,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-4\" stroke-width=\"2px\" d=\"M770,352.0 C770,264.5 910.0,264.5 910.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-4\" stroke-width=\"2px\" d=\"M770,352.0 C770,264.5 910.0,264.5 910.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">obl:agent</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">obl:agent</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M770,354.0 L762,342.0 778,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-5\" stroke-width=\"2px\" d=\"M945,352.0 C945,89.5 1620.0,89.5 1620.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-5\" stroke-width=\"2px\" d=\"M945,352.0 C945,89.5 1620.0,89.5 1620.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-5\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">advcl</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-5\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">advcl</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M945,354.0 L937,342.0 953,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-6\" stroke-width=\"2px\" d=\"M1120,352.0 C1120,264.5 1260.0,264.5 1260.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-6\" stroke-width=\"2px\" d=\"M1120,352.0 C1120,264.5 1260.0,264.5 1260.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-6\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">case</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-6\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">case</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1120,354.0 L1112,342.0 1128,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-7\" stroke-width=\"2px\" d=\"M1295,352.0 C1295,177.0 1615.0,177.0 1615.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-7\" stroke-width=\"2px\" d=\"M1295,352.0 C1295,177.0 1615.0,177.0 1615.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-7\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">obl</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-7\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">obl</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1295,354.0 L1287,342.0 1303,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-8\" stroke-width=\"2px\" d=\"M1295,352.0 C1295,264.5 1435.0,264.5 1435.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-5270ac2c499d48e996dde8317d45acc9-0-8\" stroke-width=\"2px\" d=\"M1295,352.0 C1295,264.5 1435.0,264.5 1435.0,352.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-a185a65ddf2d4d4e8e7dbd660203517a-0-8\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-5270ac2c499d48e996dde8317d45acc9-0-8\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M1435.0,354.0 L1443.0,342.0 1427.0,342.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,18 +841,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
-       "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    Iason\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
-       "</mark>\n",
-       " et \n",
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Iason et \n",
        "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    Medea\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
@@ -890,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
